# my_pushup_tracker

./: .env.example  .gitignore  README.md  main.py  pushup_tracker.service  pyproject.toml  requirements.txt
bot/: config.py  formatters.py  keyboards.py  scheduler.py  storage.py  todo.py
bot/handlers/: commands.py  fsm.py  inline.py  reminders_cmd.py  todo.py
